fix: 코드 변경으로 인한 테스트 수정 (#319)